# reflexion_agent

Module4: Assistant Agent/: Module 4 Parallelization.ipynb  Research Assistant Module 4.ipynb
langgraph_course/: 1_chain.py  2_router.py  4_summary.py  6_summaryAndExternalMemory.py  8_humanFeedback.py  9_parallel_agents.py  agent.py  example.db  example2.db  memory.py  pyproject.toml
reflexion_agent/: .env  README.md  chains.py  main.py  pyproject.toml  test.py
reflexion_agent_search/: main.py  pyproject.toml  schemas.py
